# analytics

./: .dockerignore  .gitignore  API.md  CLAUDE.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  config.example.toml  docker-compose.yml  openapi.json
.github/workflows/: bench.yml  ci.yml  fuzz.yml
assets/: beacon.js  beacon.min.js
benches/: ingest.rs  queries.rs
examples/: load_test.rs  sign_user.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: incoming_event.rs  parse_utm.rs
migrations/: 20260419000001_initial.sql
scripts/: loadtest-run.sh
src/: auth.rs  backup.rs  beacon.rs  config.rs  crypto.rs  db.rs  error.rs  geoip.rs  hot_reload.rs  lib.rs  main.rs  metrics.rs  model.rs  net.rs  openapi.rs  rate_limit.rs  retention.rs  sessions.rs  state.rs  telemetry.rs  user_token.rs  visitor.rs  wal_checkpoint.rs
src/ingest/: mod.rs  parse.rs  validator.rs
src/query/: aggregates.rs  export.rs  mod.rs
src/webhooks/: delivery.rs  mod.rs
tests/it/: auth.rs  common.rs  export.rs  ingest.rs  main.rs  proptests.rs  query.rs  stats.rs  validator.rs  webhooks.rs
